export default class ColumnBodyEntityInterface {
  getName() {}
  getRawValue() {}
  getHtmlValue() {}
}