export default class DensityInterface {
  setDensity(density) {}
  getDensity() {}
}
