export default class RenderInterface {
  reRenderView() {}
}
