export default class SortInterface {
  getEntities (entities, columns) {}
  by(field) {}
}